--- a/ndcube/asdf/resources/schemas/ndcube-0.1.0.yaml
+++ b/ndcube/asdf/resources/schemas/ndcube-0.1.0.yaml
@@ -16,9 +16,9 @@ properties:
   wcs:
     anyOf:
       - tag: "tag:stsci.edu:gwcs/wcs-1.*"
-      - tag: "tag:sunpy.org:ndcube/resampledwcs-0.1.0"
-      - tag: "tag:sunpy.org:ndcube/reorderedwcs-0.1.0"
-      - tag: "tag:sunpy.org:ndcube/compoundwcs-0.1.0"
+      - tag: "tag:sunpy.org:ndcube/resampledwcs-*"
+      - tag: "tag:sunpy.org:ndcube/reorderedwcs-*"
+      - tag: "tag:sunpy.org:ndcube/compoundwcs-*"
   extra_coords:
     tag: "tag:sunpy.org:ndcube/extra_coords/extra_coords/extracoords-0.*"
   global_coords:
