--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,14 @@ tests = [
 docs = [
   "sphinx",
   "sphinx-automodapi",
+<<<<<<<
+=======
+  "sunpy-sphinx-theme",
+  "packaging",
+]
+[project.urls]
+repository = "https://docs.sunpy.org/projects/ndcube"
+>>>>>>>
   "matplotlib",
   "mpl-animators>=1.0",
   "sphinx-changelog>=1.1.0",
