--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ authors = [
 dependencies = [
   "astropy>=5.0.6,!=5.1.0",
   "gwcs>=0.18",
-  "numpy>=1.23.0"
+  "numpy>=1.23.0",
+  "scipy>=1.8.0",
 ]
 dynamic = ["version"]
 
