Hashes plus figure config

--- a/pytest.ini
+++ b/pytest.ini
@@ -25,6 +25,9 @@ addopts =
     -p no:threadexception
     -m "not mpl_image_compare"
     --doctest-ignore-import-errors
+    --doctest-continue-on-failure
+mpl-results-path = figure_test_images
+mpl-use-full-test-name = true
 filterwarnings =
     # Turn all warnings into errors so they do not pass silently.
     error
