--- a/pytest.ini
+++ b/pytest.ini
@@ -51,6 +51,8 @@ filterwarnings =
     ignore:Animating a NDCube does not support transposing the array. The world axes may not display as expected because the array will not be transposed:UserWarning
     # This is raised by the Windows and mac os build for visualization.rst
     ignore:FigureCanvasAgg is non-interactive, and thus cannot be shown:UserWarning
+    # Oldestdeps from gWCS
+    ignore:pkg_resources is deprecated as an API:DeprecationWarning
 remote_data_strict = True
 doctest_subpackage_requires =
     docs/explaining_ndcube/* = numpy>=2.0.0
