Update cruft with batchpr

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,12 +57,23 @@ reproject = [
 ]
 all = [
   "ndcube[plotting,reproject]",
+<<<<<<<
 ]
 dev = [
   "ndcube[tests,docs,plotting,reproject]",
+=======
+docs = [
+  "sphinx",
+  "sphinx-automodapi",
+  "sphinx-changelog",
+  "sunpy-sphinx-theme",
+  "packaging",
+>>>>>>>
 ]
+
 [project.urls]
-repository = "https://docs.sunpy.org/projects/ndcube"
+Homepage = "https://docs.sunpy.org/projects/ndcube"
+Download = "https://pypi.org/project/ndcube"
 
 [tool.setuptools]
 zip-safe = false
@@ -143,6 +154,71 @@ write_to = "ndcube/_version.py"
     type_incorrect_long = "The changelog file you added is not one of the allowed types. Please use one of the types described in the changelog [README](https://github.com/sunpy/ndcube/blob/main/changelog/README.rst)"
     number_incorrect_long = "The number in the changelog file you added does not match the number of this pull request. Please rename the file."
 
+<<<<<<<
   [ tool.gilesbot.milestones ]
     enabled = true
     missing_message_long = "This pull request does not have a milestone assigned to it. Only maintainers can change this, so you don't need to worry about it. :smile:"
+=======
+[tool.setuptools_scm]
+write_to = "ndcube/_version.py"
+
+[tool.gilesbot]
+  [tool.gilesbot.pull_requests]
+  enabled = true
+
+  [tool.gilesbot.towncrier_changelog]
+  enabled = true
+  verify_pr_number = true
+  changelog_skip_label = "No Changelog Entry Needed"
+  help_url = "https://github.com//blob/main/changelog/README.rst"
+
+  changelog_missing_long = "There isn't a changelog file in this pull request. Please add a changelog file to the `changelog/` directory following the instructions in the changelog [README](https://github.com//blob/main/changelog/README.rst)."
+
+  type_incorrect_long = "The changelog file you added is not one of the allowed types. Please use one of the types described in the changelog [README](https://github.com//blob/main/changelog/README.rst)"
+
+  number_incorrect_long = "The number in the changelog file you added does not match the number of this pull request. Please rename the file."
+
+# TODO: This should be in towncrier.toml but Giles currently only works looks in
+# pyproject.toml we should move this back when it's fixed.
+[tool.towncrier]
+  package = "ndcube"
+  filename = "CHANGELOG.rst"
+  directory = "changelog/"
+  issue_format = "`#{issue} https:github.com//changelog/pull/{issue}>`__"
+  title_format = "{version} ({project_date})"
+
+  [[tool.towncrier.type]]
+  directory = "breaking"
+  name = "Breaking Changes"
+  showcontent = true
+
+  [[tool.towncrier.type]]
+  directory = "deprecation"
+  name = "Deprecations"
+  showcontent = true
+
+  [[tool.towncrier.type]]
+  directory = "removal"
+  name = "Removals"
+  showcontent = true
+
+  [[tool.towncrier.type]]
+  directory = "feature"
+  name = "New Features"
+  showcontent = true
+
+  [[tool.towncrier.type]]
+  directory = "bugfix"
+  name = "Bug Fixes"
+  showcontent = true
+
+  [[tool.towncrier.type]]
+  directory = "doc"
+  name = "Documentation"
+  showcontent = true
+
+  [[tool.towncrier.type]]
+  directory = "trivial"
+  name = "Internal Changes"
+  showcontent = true
+>>>>>>>
