--- a/.ruff.toml
+++ b/.ruff.toml
@@ -40,6 +40,11 @@ extend-ignore = [
   "NPY002", # TODO: migrate from np.random.rand to np.random.Generator
   # pytest (PT)
   "PT001", # Always use pytest.fixture()
+  # TODO FIX
+  "PT004", # Fixtures which don't return anything should have leading _
+  "PT011", # TODO: except(ValueRaises) is too broad
+  "PT012", # TODO: except statement is too lengthy
+  #
   "PT023", # Always use () on pytest decorators
   # flake8-pie (PIE)
   "PIE808", # Disallow passing 0 as the first argument to range
