--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ tests = [
   "pytest-mpl>=0.12",
   "pytest-xdist",
   "pytest",
-  "pytest-memray",
+  "pytest-memray; sys_platform != 'win32'",
   "scipy",
   "specutils",
   "sunpy>=5.0.0",
