--- a/pytest.ini
+++ b/pytest.ini
@@ -28,6 +28,11 @@ addopts =
     --doctest-continue-on-failure
 mpl-results-path = figure_test_images
 mpl-use-full-test-name = true
+remote_data_strict = True
+doctest_subpackage_requires =
+    docs/explaining_ndcube/* = numpy>=2.0.0
+markers =
+    limit_memory: pytest-memray marker to fail a test if too much memory used
 filterwarnings =
     # Turn all warnings into errors so they do not pass silently.
     error
@@ -53,6 +58,3 @@ filterwarnings =
     ignore:FigureCanvasAgg is non-interactive, and thus cannot be shown:UserWarning
     # Oldestdeps from gWCS
     ignore:pkg_resources is deprecated as an API:DeprecationWarning
-remote_data_strict = True
-doctest_subpackage_requires =
-    docs/explaining_ndcube/* = numpy>=2.0.0
