--- a/ndcube/asdf/resources/manifests/ndcube-0.1.0.yaml
+++ b/ndcube/asdf/resources/manifests/ndcube-0.1.0.yaml
@@ -21,6 +21,9 @@ tags:
   - tag_uri:  "tag:sunpy.org:ndcube/extra_coords/table_coord/skycoordtablecoordinate-0.1.0"
     schema_uri: "asdf://sunpy.org/ndcube/schemas/skycoordtablecoordinate-0.1.0"
 
+  - tag_uri:  "tag:sunpy.org:ndcube/extra_coords/table_coord/multipletablecoordinate-1.0.0"
+    schema_uri: "asdf://sunpy.org/ndcube/schemas/multipletablecoordinate-1.0.0"
+
   - tag_uri:  "tag:sunpy.org:ndcube/global_coords/globalcoords-0.1.0"
     schema_uri: "asdf://sunpy.org/ndcube/schemas/global_coords-0.1.0"
 
