--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,10 @@ authors = [
   { name = "The SunPy Community", email = "sunpy@googlegroups.com" },
 ]
 dependencies = [
-  "astropy>=5.0.6,!=5.1.0",
-  "gwcs>=0.18",
-  "numpy>=1.23.0",
-  "scipy>=1.8.0",
+  "astropy>=5.3.0",
+  "gwcs>=0.20",
+  "numpy>=1.25.0",
+  "scipy>=1.11.1",
 ]
 dynamic = ["version"]
 
@@ -50,11 +50,11 @@ docs = [
   "sunpy>=5.0.0",
 ]
 plotting = [
-  "matplotlib>=3.5.0",
-  "mpl_animators>=1.0",
+  "matplotlib>=3.8.0",
+  "mpl_animators>=1.1",
 ]
 reproject = [
-  "reproject>=0.7.1",
+  "reproject>=0.11.0",
 ]
 all = [
   "ndcube[plotting,reproject]",
