--- a/tox.ini
+++ b/tox.ini
@@ -67,7 +67,7 @@ extras =
     reproject
     tests
 commands_pre =
-    oldestdeps: minimum_dependencies ndcube --filename requirements-min.txt
+    oldestdeps: minimum_dependencies ndcube --extras plotting reproject --filename requirements-min.txt
     oldestdeps: pip install -r requirements-min.txt
     oldestdeps: python -c "import astropy.time; astropy.time.update_leap_seconds()"
     pip freeze --all --no-input
