--- a/ndcube/asdf/resources/schemas/ndcube-1.0.0.yaml
+++ b/ndcube/asdf/resources/schemas/ndcube-1.0.0.yaml
@@ -28,7 +28,9 @@ properties:
   meta:
     type: object
   mask:
-    type: object
+    anyOf:
+      - tag: "tag:stsci.edu:asdf/core/ndarray-1.*"
+      - type: boolean
   unit:
     anyOf:
      - tag: "tag:stsci.edu:asdf/unit/unit-1.*"
