--- a/ndcube/asdf/resources/schemas/timetablecoordinate-1.0.0.yaml
+++ b/ndcube/asdf/resources/schemas/timetablecoordinate-1.0.0.yaml
@@ -12,13 +12,13 @@ description:
 type: object
 properties:
   table:
-    tag: "tag:stsci.edu:asdf/time/time-1*"
+    tag: "tag:stsci.edu:asdf/time/time-*"
   names:
     type: array
   physical_types:
     type: array
   reference_time:
-    tag: "tag:stsci.edu:asdf/time/time-1*"
+    tag: "tag:stsci.edu:asdf/time/time-*"
 
 required: ["table"]
 additionalProperties: False
