--- a/ndcube/asdf/resources/schemas/global_coords-1.0.0.yaml
+++ b/ndcube/asdf/resources/schemas/global_coords-1.0.0.yaml
@@ -18,7 +18,7 @@ properties:
       items:
           - type: string
           - type: object
-            oneOf:
+            anyOf:
               - tag: "tag:stsci.edu:asdf/unit/quantity-*"
               - tag: "tag:astropy.org:astropy/coordinates/skycoord-*"
   ndcube:
