--- a/ndcube/asdf/resources/schemas/ndcollection-1.0.0.yaml
+++ b/ndcube/asdf/resources/schemas/ndcollection-1.0.0.yaml
@@ -15,9 +15,11 @@ properties:
     type: object
     patternProperties:
       ".*":
-        oneOf:
-          - tag: "tag:sunpy.org:ndcube/ndcube/ndcube-*"
-          - tag: "tag:sunpy.org:ndcube/ndcube/ndcube_sequence-*"
+        anyOf:
+          - tag: "tag:sunpy.org:ndcube/ndcube/ndcube-1.*"
+          - tag: "tag:sunpy.org:ndcube/ndcube/ndcube_sequence-1.*"
+          # Allow any other objects here as we don't want to restrict what people can save
+          - {}
   aligned_axes:
     anyOf:
     - type: object
