--- a/ndcube/asdf/resources/schemas/resampledwcs-1.0.0.yaml
+++ b/ndcube/asdf/resources/schemas/resampledwcs-1.0.0.yaml
@@ -21,5 +21,5 @@ properties:
     tag: "tag:stsci.edu:asdf/core/ndarray-1.*"
 
 required: [wcs]
-additionalProperties: true
+additionalProperties: false
 ...
