--- a/ndcube/asdf/resources/schemas/timetablecoordinate-1.0.0.yaml
+++ b/ndcube/asdf/resources/schemas/timetablecoordinate-1.0.0.yaml
@@ -21,5 +21,5 @@ properties:
     tag: "tag:stsci.edu:asdf/time/time-*"
 
 required: ["table"]
-additionalProperties: False
+additionalProperties: false
 ...
