--- a/ndcube/asdf/resources/schemas/extra_coords-1.0.0.yaml
+++ b/ndcube/asdf/resources/schemas/extra_coords-1.0.0.yaml
@@ -32,7 +32,7 @@ properties:
   dropped_tables:
     type: array
   ndcube:
-    tag: "tag:sunpy.org:ndcube/ndcube/ndcube-1.*"
+    tag: "tag:sunpy.org:ndcube/ndcube-1.*"
 
 required: [ndcube]
 additionalProperties: false
