--- a/ndcube/asdf/resources/schemas/ndcollection-1.0.0.yaml
+++ b/ndcube/asdf/resources/schemas/ndcollection-1.0.0.yaml
@@ -18,8 +18,8 @@ properties:
     patternProperties:
       ".*":
         anyOf:
-          - tag: "tag:sunpy.org:ndcube/ndcube/ndcube-1.*"
-          - tag: "tag:sunpy.org:ndcube/ndcube/ndcube_sequence-1.*"
+          - tag: "tag:sunpy.org:ndcube/ndcube-1.*"
+          - tag: "tag:sunpy.org:ndcube/ndcube_sequence-1.*"
           # Allow any other objects here as we don't want to restrict what people can save
           - type: object
   aligned_axes:
