--- a/tox.ini
+++ b/tox.ini
@@ -63,11 +63,10 @@ deps =
     figure-!devdeps: scipy
 # The following indicates which extras_require will be installed
 extras =
-    plotting
-    reproject
-    tests
+    !oldestdeps: tests
+    oldestdeps: tests-only
 commands_pre =
-    oldestdeps: minimum_dependencies ndcube --extras plotting reproject --filename requirements-min.txt
+    oldestdeps: minimum_dependencies ndcube --extras plotting reproject asdf --filename requirements-min.txt
     oldestdeps: pip install -r requirements-min.txt
     oldestdeps: python -c "import astropy.time; astropy.time.update_leap_seconds()"
     pip freeze --all --no-input
